carrinho de compra

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -45,11 +45,19 @@
 			<li><a href="{% url 'login' %}">Entrar</a></li>
 			<li><a href="{% url 'accounts:register' %}">Registro</a></li>
 			{% endif %}
+			<li><a href="{% url 'checkout:cart_item' %}">Carrinho</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="container margin-top">
+		{% block messages %}
+		{% for message in messages %}
+		<div class="alert alert-{{ message.tags }}">
+			{{ message }}
+		</div>
+		{% endfor %}
+		{% endblock %}
 		{% block container %}{% endblock %}
 		<footer>
 			<div class="row">
